--- a/src/pages/Orders.css
+++ b/src/pages/Orders.css
@@ -1,6 +1,6 @@
 .custom-orders-wrapper {
   width: 100%;
-  background: #f6f5f3;
+  /* background: #f6f5f3; */
   min-height: 100vh;
   overflow-x: hidden;
 }
