--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
   --text-color: #333333;
   --font-size: 16px;
   --border-radius: 8px;
+  --accent-color: #000000ff;
+  --text-color: #1c1c1c;
 }
-body{
+body {
   background-color: var(--primary-color);
 }
