--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #f8fafc;
+  --primary-color: #f1f5f980;
   --secondary-color: #fff;
   --text-color: #333333;
   --font-size: 16px;
